--- a/day7/zuoye/package.json
+++ b/day7/zuoye/package.json
@@ -12,7 +12,8 @@
     "core-js": "^2.6.5",
     "serve": "^11.1.0",
     "vant": "^2.0.9",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
